force-app/main/default/objects/UMB_Design_Element__c/UMB_Design_Element__c.object-meta.xml
<CustomObject>
    <label>UMB Design Element</label>
    <nameField>
        <label>Design Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UMB Design Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>