force-app/main/default/objects/UMB_Design_Element__c/fields/Design_Option__c.field-meta.xml
<CustomField>
    <fullName>Design_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Design Option</label>
    <referenceTo>UMB_Design_Option__c</referenceTo>
    <relationshipLabel>Design Elements</relationshipLabel>
    <relationshipName>Design_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>