force-app/main/default/objects/UMB_Design_Element__c/fields/Is_Hearted__c.field-meta.xml
<CustomField>
    <fullName>Is_Hearted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hearted</label>
    <type>Checkbox</type>
</CustomField>