force-app/main/default/objects/UMB_Design_Element__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <label>Placement</label>
    <length>120</length>
    <type>Text</type>
</CustomField>