force-app/main/default/objects/UMB_Design_Element__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>UMB Design Elements</relationshipLabel>
    <relationshipName>UMB_Design_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>